# RPi

adhoc/: CMakeLists.txt  udp_sender.h  wireless.cpp
calibrate/: CMakeLists.txt
opencv_communication/: CMakeLists.txt  basic_image_detection.cpp  basic_image_detection.h  benchmark.cpp  benchmark.h  communication.cpp  detect.h  fps_avg.h  fusion_base.h  image_formats.h  image_sharing.h  interpreter_base.h  is_relative_features.h  manager.cpp  mavg.h  message.h  object_detector.cpp  object_detector.h  object_library.cpp  object_library.h  prob_object.cpp  prob_object.h  prob_subobject.h  udp_receiver.h  udp_sender.h
opencv_communication/include/: basic_image_detection.h  object_library.h
opencv_rpi/: .gitignore  CMakeLists.txt  README  detect.cpp  orb_detect.cpp  surf_detect.cpp
pictures/isrf/: cv
rpi_fusion/: .gitignore  CMakeLists.txt  benchmark.cpp  image_sharing.cpp  is_relative_features.cpp  manager.cpp  object_detector.cpp  object_library.cpp  prob_object.cpp  prob_subobject.cpp
rpi_fusion/include/: fusion_base.h  image_sharing.h  interpreter_base.h  is_relative_features.h  object_detector.h  prob_object.h  prob_subobject.h  udp_receiver.h
rpi_fusion/test/: is_relative_feature_test.cpp  manager.cpp
sim/: README  objects.py  quorum.py  rb.py  rbutils.py
test_opencv/: DisplayImage.cpp  README
